# supadns-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: connection_manager.rs  doh_resolver.rs  lib.rs
